--- a/5/package.json
+++ b/5/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon server.js"
+    "start": "npx nodemon server-l5.js"
   },
   "keywords": [],
   "author": "",
